software_spi/build/log/idf_py_stdout_output_92538
[1/11] Performing build step for 'bootloader'
[1/1] cd /Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/software_spi/build/bootloader/esp-idf/esptool_py && /Users/hanyi02/.espressif/python_env/idf5.1_py3.9_env/bin/python /Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/software_spi/build/bootloader/bootloader.bin
Bootloader binary size 0x6790 bytes. 0x870 bytes (8%) free.
[2/9] Building C object esp-idf/spi_driver/CMakeFiles/__idf_spi_driver.dir/spi_driver.c.obj
FAILED: esp-idf/spi_driver/CMakeFiles/__idf_spi_driver.dir/spi_driver.c.obj 
/Users/hanyi02/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1-dev-4124-gbb9200acec\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/software_spi/build/config -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/software_spi/components/spi_driver/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/newlib/platform_include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/freertos/esp_additions/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_hw_support/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/heap/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/log/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/soc/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/soc/esp32 -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/soc/esp32/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/hal/esp32/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/hal/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/hal/platform_port/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_rom/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_rom/include/esp32 -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_rom/esp32 -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_common/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_system/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_system/port/soc -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_system/port/include/private -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/xtensa/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/xtensa/esp32/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/lwip/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/lwip/include/apps -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/lwip/lwip/src/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/lwip/port/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/lwip/port/freertos/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/driver/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/driver/deprecated -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/driver/analog_comparator/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/driver/dac/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/driver/gpio/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/driver/gptimer/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/driver/i2c/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/driver/i2s/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/driver/ledc/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/driver/mcpwm/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/driver/parlio/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/driver/pcnt/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/driver/rmt/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/driver/sdio_slave/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/driver/sdmmc/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/driver/sigma_delta/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/driver/spi/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/driver/temperature_sensor/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/driver/touch_sensor/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/driver/twai/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/driver/uart/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/driver/usb_serial_jtag/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_pm/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/software_spi=. -fmacro-prefix-map=/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/spi_driver/CMakeFiles/__idf_spi_driver.dir/spi_driver.c.obj -MF esp-idf/spi_driver/CMakeFiles/__idf_spi_driver.dir/spi_driver.c.obj.d -o esp-idf/spi_driver/CMakeFiles/__idf_spi_driver.dir/spi_driver.c.obj -c /Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/software_spi/components/spi_driver/spi_driver.c
/Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/software_spi/components/spi_driver/spi_driver.c: In function 'execute_init_seq':
/Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/software_spi/components/spi_driver/spi_driver.c:127:12: error: 'spi' is a pointer; did you mean to use '->'?
  127 |     set(spi.other_pin.reset, 0);
      |            ^
      |            ->
/Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/software_spi/components/spi_driver/spi_driver.c:129:12: error: 'spi' is a pointer; did you mean to use '->'?
  129 |     set(spi.other_pin.reset, 1);
      |            ^
      |            ->
ninja: build stopped: subcommand failed.
